--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,4 +5,17 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="PetList.Name" parent="android:TextAppearance.Holo.Large.Inverse">
+        <item name="android:textColor">@color/pet_list_text</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
+    </style>
+
+    <style name="PetList.Breed" parent="android:TextAppearance.Holo.Inverse">
+        <item name="android:textColor">@color/pet_list_text</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+
+    <color name="pet_list_text">#e5e5e5</color>
 </resources>
