--- a/app/src/main/res/layout-sw600dp/activity_pet_list.xml
+++ b/app/src/main/res/layout-sw600dp/activity_pet_list.xml
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/pet_list"
-        android:name="com.umpay.adoptme.PetListFragment"
+        android:name="com.rgz.adoptme.PetListFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
