--- a/app/src/main/res/layout/activity_property_anim.xml
+++ b/app/src/main/res/layout/activity_property_anim.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#66ccff"
-    tools:context="com.umpay.adoptme.propertyanim.PropertyAnimActivity">
+    tools:context="com.rgz.adoptme.propertyanim.PropertyAnimActivity">
 
     <ImageView
         android:id="@+id/sun"
