--- a/app/src/main/res/layout/activity_ripples.xml
+++ b/app/src/main/res/layout/activity_ripples.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.umpay.adoptme.ripple.RipplesActivity">
+    tools:context="com.rgz.adoptme.ripple.RipplesActivity">
 
     <android.support.v4.view.PagerTabStrip
         android:layout_width="wrap_content"
