--- a/app/src/main/res/layout/activity_tween.xml
+++ b/app/src/main/res/layout/activity_tween.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.umpay.adoptme.tween.TweenActivity">
+    tools:context="com.rgz.adoptme.tween.TweenActivity">
 
     <ImageView
         android:id="@+id/imageView1"
