--- a/app/src/main/res/menu/menu_tween.xml
+++ b/app/src/main/res/menu/menu_tween.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.umpay.adoptme.tween.TweenActivity">
+    tools:context="com.rgz.adoptme.tween.TweenActivity">
     <item
         android:id="@+id/rotate360"
         android:orderInCategory="100"
